# esp-bsp

components/esp_lvgl_port/: CMakeLists.txt  idf_component.yml
components/esp_lvgl_port/include/: esp_lvgl_port_lv_blend.h
components/esp_lvgl_port/src/lvgl9/simd/: lv_color_blend_to_argb8888_aes3.S  lv_color_blend_to_argb8888_esp32.S  lv_color_blend_to_argb8888_esp32s3.S  lv_color_blend_to_argb8888_with_opa_common.S  lv_color_blend_to_argb8888_with_opa_esp32.S  lv_color_mix32_macro.S  lv_rgb565_blend_normal_to_rgb565_esp32.S
components/esp_lvgl_port/test_apps/simd/benchmark/main/: lv_fill_common.c  lv_fill_common.h  test_lv_fill_benchmark.c
components/esp_lvgl_port/test_apps/simd/functionality/main/: CMakeLists.txt  lv_fill_common.h  lv_image_common.h  test_lv_fill_functionality.c  test_lv_image_functionality.c
components/esp_lvgl_port/test_apps/simd/functionality/main/lv_blend/include/: lv_color_op.h
components/esp_lvgl_port/test_apps/simd/functionality/main/lv_blend/src/: lv_draw_sw_blend_to_argb8888.c  lv_draw_sw_blend_to_rgb565.c
components/esp_lvgl_port/test_apps/simd/main/: CMakeLists.txt  idf_component.yml  lv_fill_common.c  lv_fill_common.h  test_app_main.c  test_functionality_eval.c  test_functionalty_eval.h  test_lv_fill_benchmark.c  test_lv_fill_functionality.c
components/esp_lvgl_port/test_apps/simd/main/lv_blend/src/: lv_draw_sw_blend_to_argb8888.c
